<resources>
    <string name="app_name">My Builder</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_information">Information</string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="top_icon">TOP ICON</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="intr">Introduce your business to your customers. Describe the work you normally undertake and what makes you stand out from other tradespeople. You can always edit this later.</string>
    <string name="id">id: %1$s</string>
    <string name="des">This appears near the top of your resume. Impress employers with a strong opening statement that sums up your strengths and experience.</string>
    <string name="descr">Building Company xizmatlariga xush kelibsiz, bu sizning barcha Santexnika va o\'rnatish ehtiyojlaringizni ta\'minlaydi. Biz sizning ish talabingizni bajarish uchun ajoyib mijozlarga xizmat ko\'rsatish, tezkor, professional, ishonchli va samimiy xodimlarni taqdim etishdan faxrlanadigan innovatsion kompaniya.</string>
    <string name="savdo_sntexnika_hammom_uchun_jihoz_oshxona_jihozlari_plitka_qo_yish">Savdo <br>Santexnika</br> <br>Hammom uchun jihoz Oshxona jihozlari</br> <br>Plitka qo\'yish</br></string>
    <string name="title_activity_spalsh">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="display_name">%1$s %2$s</string>
    <string name="createR">Want to find a job faster? Fill out your resume. The employers themselves will start offering you vacancies.</string>
</resources>