<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="uz.texnopos.mybuilder.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="uz.texnopos.mybuilder.ui.favorites.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="uz.texnopos.mybuilder.ui.login.LoginFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_profile_to_profileFragment"
            app:destination="@id/profileFragment"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_information"
        android:name="uz.texnopos.mybuilder.ui.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="uz.texnopos.mybuilder.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:popUpTo="@id/navigation_home"
            />
    </fragment>
</navigation>